[package]
name = "mywongus"
version = "0.1.0"
edition = "2021"

[dependencies]
# gtk = { version = "0.18", features = ["v3_24"] }
gtk = "0.18.1"
gtk-layer-shell = "0.8"
tao = "0.28"
tao-macros = "0.1.3"
tokio = "1.39.3"
clap = { version = "4.5.16", features = ["derive"] }
# tokio = { version = "1", features = [
#     "rt",
#     "process",
#     "sync",
#     "macros",
#     "time",
#     "io-util",
#     "fs",
# ] }
wry = "0.42"

[patch.crates-io]
tao = { git = "https://github.com/andrewbaxter/fork-tao", rev = "80e1008438d57b72921192ff44ffc252ab676edb" }
tao-macros = { git = "https://github.com/andrewbaxter/fork-tao", rev = "80e1008438d57b72921192ff44ffc252ab676edb" }
